# tipica

./: .gitignore  Makefile  README.rst  requirements.txt  setup.cfg  tipica.spec
etc/profile.d/: tipica_bc.sh
etc/sudoers.d/: tipica
etc/systemd/system/: tipica-dhcp.service  tipica-http.service
etc/tipica/: dnsmasq.conf  nginx.conf  tipica.conf
tipica/: __init__.py  config.py  db.py  exceptions.py  image_builder.py  objects.py  shell.py  utils.py
tipica/drivers/: __init__.py  amtterm.py  ipmitool.py
