[metadata]
name = tipica
version = 0.1.1
summary = Pure Bare-Metal Machine Manager
description-file = README.rst
license = Apache License, Version 2.0
author = r-mibu
author-email = r-mibu@cq.jp.nec.com
classifier =
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    #License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    tipica

[entry_points]
console_scripts =
    tipica = tipica.shell:main
